# AiSOC

./: .env.example  .gitignore  AGENTS.md  AISOC_V8_PROGRESS.md  AI_STACK_PLAN_PROGRESS.md  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  GOVERNANCE.md  LIVE-DEMO.md  MAINTAINERS.md  Makefile  PROGRESS.md  README.md  RELEASES.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TRADEMARK.md  cyble-aisoc-plan.md  docker-compose.yml  index.html  install.ps1  install.sh  package.json  pnpm-lock.yaml  uninstall.ps1  uninstall.sh
plans/cyble-aisoc/platform/backend/: Dockerfile  pyproject.toml
plans/cyble-aisoc/platform/backend/app/: config.py  main.py  seed.py
plans/cyble-aisoc/platform/backend/scripts/: run_benchmark.py  (+1 more)
services/actions/: pyproject.toml
services/actions/app/: main.py
services/actions/app/api/: router.py
services/actions/app/clients/: aws_security_groups.py  azure_entra_client.py  cloudflare_client.py  crowdstrike_rtr.py  defender_client.py  elastic_client.py  fortigate_client.py  google_workspace_client.py  jira_client.py  pagerduty_client.py  panos_client.py  sentinelone_client.py  servicenow_client.py  splunk_client.py
services/actions/app/executors/: base.py  endpoint.py  identity.py  network.py  notification.py  siem.py
services/actions/app/live_actions/: builtins.py  dispatcher.py  models.py
services/actions/app/models/: action.py
services/actions/app/security/: credential_vault.py
services/actions/app/services/: autonomy_safety.py  credential_resolver.py  executor_registry.py  maturity.py  rollback.py  verification.py
services/actions/tests/: test_alert_lifecycle_clients.py  test_alert_lifecycle_executors.py  test_autonomy_safety.py  test_create_ticket_executor_vendors.py  test_credential_resolver.py  test_endpoint_executor_sentinelone.py  test_governed_dispatch.py  test_identity_executor_vendors.py  test_identity_idp_clients.py  test_live_action_builtins.py  test_live_action_dispatcher.py  test_live_action_router.py  test_network_executor_vendors.py  test_network_firewall_clients.py  test_rollback.py  test_sentinelone_client.py  test_ticketing_clients.py  test_verification.py
services/connectors/: pyproject.toml
services/connectors/app/: ingest_client.py  main.py  scheduler.py
services/connectors/app/api/: router.py
services/connectors/app/connectors/: __init__.py  abnormal_security.py  auditd.py  aws_security_hub.py  azure_activity.py  azure_defender.py  azure_entra.py  base.py  box.py  cloudflare.py  cloudflare_zt.py  confluence_audit.py  cortex_xdr.py  crowdstrike.py  datadog.py  devo.py  dropbox.py  duo_security.py  elastic.py  email_inbox.py  exabeam.py  falco.py  fleetdm.py  gcp_cloud_audit.py  gcp_scc.py  github.py  gitlab.py  google_workspace.py  jira_connector.py  lacework.py  llm_usage.py  m365_audit.py  netskope.py  oci.py  okta.py  onepassword.py  opsgenie.py  osctrl.py  pagerduty.py  proofpoint.py  (+18 more)
services/connectors/app/db/: connector_repo.py
services/connectors/app/federated/: query.py
services/connectors/app/pipeline/: __init__.py  filter_rules.py
services/connectors/app/security/: credential_vault.py
services/connectors/tests/: test_auditd_connector.py  test_azure_connectors.py  test_conformance.py  test_gcp_connectors.py  test_kql_aliases.py  test_saas_connectors.py  test_scheduler.py  test_schemas.py  test_wave3_connectors.py  test_wazuh_connector.py
services/connectors/tests/connectors/: test_abnormal_security.py  test_box.py  test_cloudflare_zt.py  test_datadog.py  test_dropbox.py  test_falco.py  test_gitlab.py  test_live_vendor_smoke.py  test_llm_usage.py  test_ndr_edge_expansion.py  test_oci.py  test_opsgenie.py  test_pagerduty.py  test_siem_expansion.py  test_snowflake.py  test_sublime_security.py  test_sysdig.py  test_tines.py  test_torq.py  test_vault.py
services/fusion/: Dockerfile  pyproject.toml
services/fusion/app/: main.py
services/fusion/app/api/: router.py
services/fusion/app/core/: config.py
services/fusion/app/data/: detection_ruleset.json
services/fusion/app/memory/: __init__.py  cli.py  distill.py  improvement.py  pack.py  stage.py
services/fusion/app/models/: alert.py
services/fusion/app/services/: alert_sink.py  attack_chain_grouper.py  detection_engine.py  detection_matcher.py  dlq.py  entity_risk.py  event_schema.py  fusion_engine.py  lake_writer.py  promoter.py  ueba_signal.py  vuln_boost.py
services/fusion/app/workers/: consumer.py
services/fusion/tests/: test_alert_sink.py  test_attack_chain_grouper.py  test_consumer_dlq.py  test_detection_engine.py  test_detection_matcher_parity.py  test_dlq.py  test_event_schema.py  test_lake_writer.py  test_memory.py  test_process_endpoint.py  test_promoter.py  test_ueba_signal.py
services/mesh/: Dockerfile  pyproject.toml
services/mesh/app/: __init__.py  artifacts.py  consensus.py  crypto.py  hub.py  main.py
services/mesh/tests/: test_mesh.py
services/osquery-tls/: pyproject.toml
services/osquery-tls/app/: main.py
services/slack-bot/: Dockerfile  pyproject.toml
services/slack-bot/app/: blocks.py  interactions.py  main.py
services/slack-bot/app/services/: approval_timeout.py  hmac_verify.py  timer_store.py
services/slack-bot/tests/: test_aisoc_clients.py  test_approval_audit.py  test_approval_timeout.py  test_blocks.py  test_hmac_verify.py  test_interactions.py  test_main.py  test_timer_store.py
services/teams-bot/: README.md  pyproject.toml
services/teams-bot/app/: __init__.py  callbacks.py  cards.py  main.py
services/teams-bot/app/services/: __init__.py  aisoc_clients.py  hmac_signer.py
services/teams-bot/tests/: conftest.py
services/threatintel/: pyproject.toml
services/threatintel/app/: airgap.py  config.py  main.py
services/threatintel/app/api/: actor_attribution.py  auth.py
services/threatintel/app/storage/: qdrant.py
services/threatintel/tests/: test_actor_attribution_auth.py
services/ueba/: pyproject.toml
services/ueba/alembic/: env.py
services/ueba/app/: _health.py  main.py
services/ueba/app/api/: routes.py
services/ueba/app/core/: config.py
services/ueba/tests/: test_config.py
(+1402 files in other folders)
