[tool.poetry]
name = "aisoc-actions"
version = "0.1.0"
description = "AiSOC Action Execution Service - blast-radius gated response actions with rollback"
authors = ["Beenu Arora <beenu@cyble.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.109,<0.140"
uvicorn = {extras = ["standard"], version = ">=0.27,<0.50"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
redis = {extras = ["hiredis"], version = ">=5.0.1,<9.0.0"}
asyncpg = ">=0.29.0,<0.32"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
structlog = ">=24.1,<27.0"
httpx = ">=0.27,<0.29"
aiokafka = ">=0.10,<0.15"
python-dateutil = "^2.8.2"
cryptography = ">=42,<50"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4,<10.0"
pytest-asyncio = ">=0.23,<1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Phase 2.2 — coverage floor for CI gate.
#
# Measured baseline at the time of introduction: 48%. Floor is
# set at 46% (current - 2pp) so flaky branch-execution variance
# doesn't break main, while still catching any real regression. Raise
# this number as the suite grows — never lower it without a written
# justification. The pyproject is consulted by
# `pytest --cov-config=pyproject.toml --cov=app` in CI.
#
# Why pyproject instead of pytest.ini: keeps the floor next to the
# dep constraint that produced it, so a bump in either is reviewed
# in the same diff.
[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
fail_under = 46
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
