[tool.poetry]
name = "aisoc-connectors"
version = "0.1.0"
description = "AiSOC Security Source Connectors"
authors = ["Beenu Arora <beenu@cyble.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
httpx = "^0.26.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
structlog = "^24.1.0"
boto3 = "^1.34.0"
# Scheduler + DB access for the connector polling loop. apscheduler runs
# in-process (one job per enabled connector instance); SQLAlchemy + asyncpg
# read the canonical connectors table that lives in the API service's
# Postgres so this microservice stays a stateless poller — no schema
# ownership, no migrations.
apscheduler = "^3.10.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
# Cryptography is required to decrypt the auth_config blob written by the
# API service's CredentialVault. We share AISOC_CREDENTIAL_KEY across both
# services via the deployment's secret store.
# Floor raised to 44.0.1 to clear CVE-2024-12797 (and later 42.x advisories);
# matches the resolved 48.x line used by the api/actions services.
cryptography = ">=44.0.1,<49"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
respx = "^0.20.0"

# Phase 2.2 — coverage floor for CI gate.
#
# Measured baseline at the time of introduction: 70%. Floor is set at
# 68% (current - 2pp) so flaky branch-execution variance doesn't break
# main, while still catching any real regression. Raise this number as
# the suite grows — never lower it. The pyproject is consulted by
# `pytest --cov-config=pyproject.toml --cov=app` in
# `python-services-wave-2-test`.
#
# Why pyproject instead of pytest.ini: keeps the floor next to the dep
# constraint that produced it, so a bump in either is reviewed in the
# same diff.
[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
fail_under = 66
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
