[tool.poetry]
name = "aisoc-mesh"
version = "0.1.0"
description = "AiSOC Federated Threat Intel Mesh hub + client (v8 P1)"
authors = ["AiSOC contributors"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.111,<0.140"
uvicorn = { version = ">=0.29,<0.52", extras = ["standard"] }
pydantic = ">=2.7,<2.14"
cryptography = ">=42,<50"
httpx = ">=0.27,<0.29"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2,<10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
