[tool.poetry]
name = "aisoc-osquery-tls"
version = "0.1.0"
description = "AiSOC osquery TLS plugin service — direct osqueryd TLS endpoint without a separate fleet manager"
authors = ["AiSOC Community"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
pydantic = ">=2.7,<2.11"
pydantic-settings = "^2.2.1"
sqlalchemy = { version = "^2.0.30", extras = ["asyncio"] }
asyncpg = ">=0.29.0,<0.32"
alembic = "^1.13.1"
httpx = ">=0.27,<0.29"
structlog = "^24.1.0"
prometheus-client = ">=0.20,<0.26"
# Floor raised to 44.0.1 to clear CVE-2024-12797 (and later 42.x advisories);
# matches the resolved 48.x line used by the api/actions services.
cryptography = ">=44.0.1,<49"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = ">=0.23.6,<1.4.0"
pytest-cov = "^5.0.0"
httpx = ">=0.27,<0.29"
ruff = "^0.4.4"
mypy = "^1.10.0"
aiosqlite = ">=0.19,<0.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


# Phase 2.2 — coverage floor for CI gate.
#
# Measured baseline at the time of introduction: 72%. Floor is
# set at 70% (current - 2pp) so flaky branch-execution variance
# doesn't break main, while still catching any real regression. Raise
# this number as the suite grows — never lower it without a written
# justification. The pyproject is consulted by
# `pytest --cov-config=pyproject.toml --cov=app` in CI.
#
# Why pyproject instead of pytest.ini: keeps the floor next to the
# dep constraint that produced it, so a bump in either is reviewed
# in the same diff.
[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
# The Phase 2.2 gate was originally set to 70% across every Python
# service, but `osquery-tls` ships with only 12 small tests covering
# the TLS enroll / config / distributed-query / log paths and leaves
# the `db.py` + `auth.py` boilerplate uncovered. Measured coverage at
# the time the gate landed was 64.45%. Anchor the floor at 60% so we
# fail-fast on real regressions (a missed test for a new endpoint
# would drop coverage well below 60%) without forcing a low-value
# coverage-padding sprint. Raise this to 70% once db/auth get their
# own dedicated test pass.
fail_under = 60
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
