[tool.poetry]
name = "aisoc-teams-bot"
version = "0.1.0"
description = "AiSOC Teams bot — Adaptive Card approval flows for ChatOps-driven SOC operations"
authors = ["AiSOC Contributors <hello@tryaisoc.com>"]
license = "MIT"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.109,<0.137"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = ">=0.27,<0.29"
structlog = ">=24.1,<26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
respx = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


# Phase 2.2 — coverage floor for CI gate.
#
# Measured baseline at the time of introduction: 29%. Floor is
# set at 27% (current - 2pp) so flaky branch-execution variance
# doesn't break main, while still catching any real regression. Raise
# this number as the suite grows — never lower it without a written
# justification. The pyproject is consulted by
# `pytest --cov-config=pyproject.toml --cov=app` in CI.
#
# Why pyproject instead of pytest.ini: keeps the floor next to the
# dep constraint that produced it, so a bump in either is reviewed
# in the same diff.
[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
fail_under = 27
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
