[project]
name = "cyble-aisoc-backend"
version = "0.1.0"
description = "Cyble AiSOC backend — agentic SOC platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlmodel>=0.0.22",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "httpx>=0.28",
  "websockets>=13.1",
  "python-multipart>=0.0.12",
  "rich>=13.9",
  "anthropic>=0.39",
  "openai>=1.54",
  "cryptography>=43",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
